# CallMeMaybe

./: .gitignore  Makefile  README.md  pyproject.toml  sdk_runner.py
data/input/: function_calling_tests.json
llm_sdk/: pyproject.toml
src/: __main__.py
