[project]
name = "callmemaybe"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "accelerate>=1.13.0",
    "huggingface-hub>=1.9.0",
    "numpy>=2.4.4",
    "pydantic>=2.12.5",
    "torch>=2.11.0",
    "transformers>=5.5.0",
]
