[project]
name = "callmemaybe"
version = "0.1.0"
description = "Function-calling tool with constrained decoding for small LLMs."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "numpy>=1.26.4",
    "pydantic>=2.12.5",
    "llm-sdk-runtime",
]

[tool.uv.sources]
llm-sdk-runtime = { path = "llm_sdk", editable = true }

[project.optional-dependencies]
dev = [
    "flake8>=7.0.0",
    "mypy>=1.8.0",
]
